--- a/src/index.sass
+++ b/src/index.sass
@@ -5,34 +5,51 @@ body {
   width: 100%;
   height: 100%;
 }
-.circle {
-  background: red;
-  border-radius: 10vh;
-  height: 8vh;
+.btnTxt{
+  height: 75px;
   position: absolute;
-  width: 8vh;
-  margin: auto;
+  width: 250px;
   top: 80%;
   bottom: 0;
   right: 0;
   left: 0;
-  opacity: 0.8;
-}
-.circle:before {
-  content: "";
-  display: block;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 2vh 0 2vh 4vh;
-  border-color: transparent transparent transparent #ffffff;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: -5px;
-  bottom: 0;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+
+  font-family: 'Open Sans', sans-serif;
+  font-size: 24px;
+  border:none;
+  border-radius:15px;
+  background: #73C9D6;
   margin: auto;
+
 }
-.circle:active {
-  opacity: 1
+  .header{
+  position: absolute;
+  top:-25px;
+  background: #fff;
+  border-radius: 30px;
+  width:100%;
+  height: 125px;
+  display: flex;
+  flex-direction: row;
+  justify-content:center;
+  align-items:center;
+  gap:15%;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 32px;
+  
+
 }
+
+.previousBtn{
+  cursor: pointer;
+  z-index: 10001;
+  background: none;
+  border:none;
+  position: absolute;
+  top: 40px;
+  left: 30px;
+}
+
